                              Also documented in docs/hooks.txt
                              
   22 Jan, 2019   'fix skiplink issues'
                              Because Voiceover  cannot handle the links, necessary to apply javascripts to have jump links accessible.
                              Also, accessible back-to-top links included.
                              Double arrow-up svg icon included.
                              In order to give focus to header, tabindex attribute introduced.

............................................................................

   28 Jan, 2019  'language file from repository'
                              Upon auploading to repo, current language file copied here.
   
   31 Jan, 2019   'tiny fixings'
   
   1 Feb 2019     'Fix skiplink issues in Firefox'
                              The current skiplink method worked on Voicover (which is not adapt the standards),
                              but this version did not worke on firefox.
                              
   1 Feb, 2019    'Reading Options accessibility enhancement'
                              Add focus to reading option button on quitng the modal window
                              Escape key also quit the modal window
                              
   2 Feb, 2019    'User friendly archive widget state 1'
                              Create Archive_Widget class to display two dropdown: month and year. 
                              Create function for archive widget
   
   4 Feb,2019     'Fix skiplink issues'
                              New skiplinks tested and some bugs are identified.
                              Now these are fixed.
                              
   4 Feb, 2019   'Add tooltips to accesskeys'
                              Also, some access keys removed. (s and k)
                              
   5 feb, 2019    'Links tooltip'
                              Added tooltips to link category 
      